TEST_PROGRAMS/VALID/04/helloworld.go
package helloworld

func main() {
    println("Hello, world!")
}
