TEST_PROGRAMS/INVALID/04/96.go
package main

func main() {
    var x = "runaway string

}
